[gd_scene load_steps=4 format=3 uid="uid://5qqlp3rikl5g"]

[ext_resource type="Script" path="res://scripts/pause_menu.gd" id="1_isi2c"]
[ext_resource type="Texture2D" uid="uid://jl8nj358snu4" path="res://assets/gui/title_rect.png" id="1_ix32j"]
[ext_resource type="FontFile" uid="uid://qgkww8kl1ptx" path="res://assets/fonts/upheavtt.ttf" id="3_kkaob"]

[node name="PauseMenu" type="CanvasLayer" node_paths=PackedStringArray("main", "effects", "effectsBtn", "hubBtn", "normalBtn", "jumpBtn", "skatesBtn", "ironBtn")]
visible = false
script = ExtResource("1_isi2c")
main = NodePath("Control/Main")
effects = NodePath("Control/Effects")
effectsBtn = NodePath("Control/Main/VBoxContainer/EffectsBtn")
hubBtn = NodePath("Control/Main/VBoxContainer/HubBtn")
normalBtn = NodePath("Control/Effects/VBoxContainer/NormalBtn")
jumpBtn = NodePath("Control/Effects/VBoxContainer/JumpBtn")
skatesBtn = NodePath("Control/Effects/VBoxContainer/SkatesBtn")
ironBtn = NodePath("Control/Effects/VBoxContainer/IronBtn")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Main" type="NinePatchRect" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 361.5
offset_top = 131.5
offset_right = 558.5
offset_bottom = 368.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_ix32j")
patch_margin_left = 18
patch_margin_top = 18
patch_margin_right = 12
patch_margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Main"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -77.0
offset_top = -58.5
offset_right = 77.0
offset_bottom = 76.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 12

[node name="EffectsBtn" type="Button" parent="Control/Main/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_kkaob")
theme_override_font_sizes/font_size = 32
text = "Effects"

[node name="HubBtn" type="Button" parent="Control/Main/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_kkaob")
theme_override_font_sizes/font_size = 32
disabled = true
text = "Hub"

[node name="QuitBtn" type="Button" parent="Control/Main/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_kkaob")
theme_override_font_sizes/font_size = 32
text = "Quit"

[node name="BackBtn" type="Button" parent="Control/Main"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -41.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 41.0
grow_horizontal = 0
theme_override_fonts/font = ExtResource("3_kkaob")
text = "X"

[node name="Effects" type="NinePatchRect" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 317.0
offset_top = 110.5
offset_right = 603.0
offset_bottom = 389.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_ix32j")
patch_margin_left = 18
patch_margin_top = 18
patch_margin_right = 12
patch_margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Effects"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -106.0
offset_top = -83.0
offset_right = 106.0
offset_bottom = 101.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 12

[node name="NormalBtn" type="Button" parent="Control/Effects/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_kkaob")
theme_override_font_sizes/font_size = 32
text = "Normal"

[node name="JumpBtn" type="Button" parent="Control/Effects/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_kkaob")
theme_override_font_sizes/font_size = 32
text = "Double Jump"

[node name="SkatesBtn" type="Button" parent="Control/Effects/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_kkaob")
theme_override_font_sizes/font_size = 32
text = "Skates"

[node name="IronBtn" type="Button" parent="Control/Effects/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_kkaob")
theme_override_font_sizes/font_size = 32
text = "Iron"

[node name="BackBtn" type="Button" parent="Control/Effects"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -41.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 41.0
grow_horizontal = 0
theme_override_fonts/font = ExtResource("3_kkaob")
text = "X"

[connection signal="pressed" from="Control/Main/VBoxContainer/EffectsBtn" to="." method="_on_effects_btn_pressed"]
[connection signal="pressed" from="Control/Main/VBoxContainer/HubBtn" to="." method="_on_hub_btn_pressed"]
[connection signal="pressed" from="Control/Main/VBoxContainer/QuitBtn" to="." method="_on_quit_btn_pressed"]
[connection signal="pressed" from="Control/Main/BackBtn" to="." method="_on_main_back_btn_pressed"]
[connection signal="pressed" from="Control/Effects/VBoxContainer/NormalBtn" to="." method="_on_normal_btn_pressed"]
[connection signal="pressed" from="Control/Effects/VBoxContainer/JumpBtn" to="." method="_on_jump_btn_pressed"]
[connection signal="pressed" from="Control/Effects/VBoxContainer/SkatesBtn" to="." method="_on_skates_btn_pressed"]
[connection signal="pressed" from="Control/Effects/VBoxContainer/IronBtn" to="." method="_on_iron_btn_pressed"]
[connection signal="pressed" from="Control/Effects/BackBtn" to="." method="_on_effects_back_btn_pressed"]
